--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,2 @@
 # https://www.playframework.com/documentation/latest/Configuration
+play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' ws://localhost:9000/room"
