--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,2 +1,4 @@
 # https://www.playframework.com/documentation/latest/Configuration
-play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' ws://localhost:9000/room"
+play.filters.hosts.allowed=["."]
+play.http.secret.key=JPsP9ZCTMHZvAeKERln1tW5sSsThfol2
+play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' ws://*:9000/room"
